@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-29T00:35:40Z",
+  "timestamp" : "2023-07-30T16:07:13Z",
   "count_outdated" : 1372,
   "uniques_outdated" : 522,
-  "count" : 1442,
-  "uniques" : 534,
+  "count" : 1448,
+  "uniques" : 535,
   "views" : [
     {
       "timestamp": "2023-07-17T00:00:00Z",
@@ -82,6 +82,15 @@
       "count": 3,
       "count_minmax": [ 2, 3 ],
       "count_decinc": [ 0, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-30T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
+      "count_decinc": [ 0, 6 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
