@@ -1,6 +1,6 @@
 {
-  "count": 70,
-  "uniques": 12,
+  "count": 76,
+  "uniques": 13,
   "views": [
     {
       "timestamp": "2023-07-17T00:00:00Z",
@@ -45,6 +45,11 @@
     {
       "timestamp": "2023-07-28T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-30T00:00:00Z",
+      "count": 6,
       "uniques": 1
     }
   ]
